--- a/review_sentiment.ipynb
+++ b/review_sentiment.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
     "\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Embedding\n",
-    "from tensorflow.keras.layers import GRU\n",
+    "from tensorflow.keras.layers import GRU, LSTM\n",
     "from tensorflow.keras.layers import Dense\n",
     "\n",
     "from tensorflow.keras import optimizers\n",
@@ -45,11 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(data_path)\n",
+    "data = pd.read_csv('Review-Sentiment-Hepsiburada.csv')\n",
     "data.head()\n",
     "\n",
     "df = data.copy()"
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "array([21, 25, 17, ..., 18, 39, 21])"
       ]
      },
-     "execution_count": 298,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "'Özellikle bu kısma yazıyorum iyice okuyunuz,cihazın hızı çok iyi.Isınma normal boyutlarda.Kamerası elinizi sabit tutarsanız ve gündüz çok net gece ise çok net çekmez.Görüntülü konuşma özelliği yok ancak uygulama ile olur,anten çekimi gayet iyi.Parmak izi okuyucusu gayet hızlı bazen tuşu silmenizi istiyor ve okuyamıyor kirden vs...Ön kamera da tatmin edici,çekim esnasında ekran beyaz ışık vererek flaş görevi görür.Batarya bana 1 hafta gidiyor sık kullanımda ise 2-3 gün gidiyor.Hızlı şarj 1 saatte doluyor , şekilleri ele oturuyor ve şık bir görüntü var.Telefonu aldığım gün gittim ve ilk girdiğim yerden ekran koruyucu ve kılıf buldum.Kulaklık sesi çok net ve yüksek ancak kendi hoparlörü biraz zayıf sesi.Ekrana bakarken açık kalma özelliği yok.Diğer akıllı cihaz özellikleri %90 ı bu cihazda mevcut.Güç tasarrufu 2 ayrı modu var ve çok başarılı çalışıyor.4gb ram var genelde yarısı boş kalıyor.Bir de yeni cihazların çoğu titreşimi az ve sesi de az çıkıyor.Bu cihaz da içine dahil...Bu cihazlar güncelleme almaz ve rom bulunmuyormuş.Benim için güncelleme sorun olmaz -cihaz parasına göre s serisi ile yarışıyor çünkü.Biraz metal olmasından dolayı elden kolay kaysada duruşu ve gösterişi iyidir.Çift flaşı var arkada.Kısaca şöyle ki bu fiyata bu ürün alınır.5 aydır kullanıyorum kasma donma felan zaten olmaz,bataryası iyi,şekli iyi,özellikler de iyi....En büyük kafa karıştıran soru şu ki hadi cihaz arıza yaptı veya düştü ekranı kırıldı.Bunun bir servisi var,ithalatçı garantisi de var.Cihazın adı sanı belli...Parça bulanmaz tamir olmaz derseniz size kalmış.Zaten normal bir cihazı da düşürseniz farkedermi?.Güncelleme almaz diyorlar bu konuda düşünebilirsiniz.S serisi cihazlarla hızını kıyaslarsınız ama güncelleme ile araya fark koymuşlar.İki katı fiyata satılan cihazla farkı olmasa zaten olmaz değil mi?Almayı düşünenler başka bir cihazla kıyas yapacaksa yine  7pro veya 9 baksınlar.C5 pro da biraz boyutu kısa ve kibar....Sonuçta ömürlük değil alın fazla düşünmeyin'"
       ]
      },
-     "execution_count": 300,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "59"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "0.9597982726686571"
       ]
      },
-     "execution_count": 302,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "(194797, 59)"
       ]
      },
-     "execution_count": 303,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "[86, 32, 14, 7, 2, 4, 3294, 416]"
       ]
      },
-     "execution_count": 304,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "          2,    4, 3294,  416])"
       ]
      },
-     "execution_count": 305,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        "'fiyatına göre gayet güzel bir ürün ışıkta güçlü'"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,6 +361,36 @@
     ")\n",
     "\"\"\"\n",
     "\n",
+    "# ?LSTM\n",
+    "\"\"\"\n",
+    "Init signature:\n",
+    "LSTM(\n",
+    "    units,\n",
+    "    activation='tanh',\n",
+    "    recurrent_activation='sigmoid',\n",
+    "    use_bias=True,\n",
+    "    kernel_initializer='glorot_uniform',\n",
+    "    recurrent_initializer='orthogonal',\n",
+    "    bias_initializer='zeros',\n",
+    "    unit_forget_bias=True,\n",
+    "    kernel_regularizer=None,\n",
+    "    recurrent_regularizer=None,\n",
+    "    bias_regularizer=None,\n",
+    "    activity_regularizer=None,\n",
+    "    kernel_constraint=None,\n",
+    "    recurrent_constraint=None,\n",
+    "    bias_constraint=None,\n",
+    "    dropout=0.0,\n",
+    "    recurrent_dropout=0.0,\n",
+    "    return_sequences=False,\n",
+    "    return_state=False,\n",
+    "    go_backwards=False,\n",
+    "    stateful=False,\n",
+    "    time_major=False,\n",
+    "    unroll=False,\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
     "# ?GRU\n",
     "\"\"\"\n",
     "Init signature:\n",
@@ -393,27 +423,208 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LSTM(Long Short Term Memory) for Sentiment Analysis"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_6\"\n",
+      "Model: \"sequential_10\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " embedding_4 (Embedding)     (None, 59, 50)            500000    \n",
+      " embedding_9 (Embedding)     (None, 59, 50)            500000    \n",
       "                                                                 \n",
-      " gru_18 (GRU)                (None, 59, 16)            3264      \n",
+      " lstm_18 (LSTM)              (None, 59, 16)            4288      \n",
       "                                                                 \n",
-      " gru_19 (GRU)                (None, 59, 8)             624       \n",
+      " lstm_19 (LSTM)              (None, 59, 8)             800       \n",
       "                                                                 \n",
-      " gru_20 (GRU)                (None, 4)                 168       \n",
+      " lstm_20 (LSTM)              (None, 4)                 208       \n",
       "                                                                 \n",
       " dense_6 (Dense)             (None, 1)                 5         \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 505301 (1.93 MB)\n",
+      "Trainable params: 505301 (1.93 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Sequential()\n",
+    "\n",
+    "model.add(\n",
+    "    Embedding(\n",
+    "        input_dim=10000,\n",
+    "        output_dim=50, \n",
+    "        input_length=59\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "model.add(LSTM(units=16, activation='tanh', return_sequences=True))\n",
+    "model.add(LSTM(units=8, activation='tanh', return_sequences=True))\n",
+    "model.add(LSTM(units=4, activation='tanh', return_sequences=False))\n",
+    "model.add(Dense(units=1, activation='sigmoid'))\n",
+    "\n",
+    "model.compile(loss='binary_crossentropy', optimizer=optimizers.Adam(), metrics=['accuracy'])\n",
+    "\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/2\n",
+      "6088/6088 [==============================] - 411s 66ms/step - loss: 0.1277 - accuracy: 0.9586\n",
+      "Epoch 2/2\n",
+      "6088/6088 [==============================] - 420s 69ms/step - loss: 0.0765 - accuracy: 0.9734\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x1d9b6dd7d90>"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X_train_tokenized_pad, y_train, epochs=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1522/1522 [==============================] - 20s 12ms/step - loss: 0.0862 - accuracy: 0.9696\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9696098566055298"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.evaluate(X_test_tokenized_pad, y_test)[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1522/1522 [==============================] - 20s 12ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted = model.predict(X_test_tokenized_pad)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 1, 1, 1, 1, 1, 0.0, 1, 1]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_lstm = [1 if value >=0.5 else 0.0 for value in predicted]\n",
+    "y_pred_lstm[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9696098562628337"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, y_pred_lstm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GRU(Gated Recurrent Unit) for Sentiment Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_11\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " embedding_10 (Embedding)    (None, 59, 50)            500000    \n",
+      "                                                                 \n",
+      " gru_3 (GRU)                 (None, 59, 16)            3264      \n",
+      "                                                                 \n",
+      " gru_4 (GRU)                 (None, 59, 8)             624       \n",
+      "                                                                 \n",
+      " gru_5 (GRU)                 (None, 4)                 168       \n",
+      "                                                                 \n",
+      " dense_7 (Dense)             (None, 1)                 5         \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 504061 (1.92 MB)\n",
@@ -444,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -452,18 +663,18 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/2\n",
-      "6088/6088 [==============================] - 397s 64ms/step - loss: 0.1467 - accuracy: 0.9569\n",
+      "6088/6088 [==============================] - 467s 75ms/step - loss: 0.1695 - accuracy: 0.9523\n",
       "Epoch 2/2\n",
-      "6088/6088 [==============================] - 392s 64ms/step - loss: 0.0764 - accuracy: 0.9738\n"
+      "6088/6088 [==============================] - 419s 69ms/step - loss: 0.0830 - accuracy: 0.9716\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.History at 0x22604a558d0>"
+       "<keras.src.callbacks.History at 0x1d9b4ee76d0>"
       ]
      },
-     "execution_count": 312,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,31 +685,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1522/1522 [==============================] - 18s 11ms/step - loss: 0.0827 - accuracy: 0.9712\n"
+      "1522/1522 [==============================] - 18s 11ms/step - loss: 0.0857 - accuracy: 0.9709\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9708829522132874"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "result = model.evaluate(X_test_tokenized_pad, np.array(y_test))"
+    "model.evaluate(X_test_tokenized_pad, y_test)[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1522/1522 [==============================] - 18s 11ms/step\n"
+      "1522/1522 [==============================] - 17s 10ms/step\n"
      ]
     }
    ],
@@ -508,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -517,55 +738,34 @@
        "[1, 1, 1, 1, 1, 1, 1, 0.0, 1, 1]"
       ]
      },
-     "execution_count": 315,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_pred = [1 if value >=0.5 else 0.0 for value in predicted]\n",
-    "y_pred[:10]"
+    "y_pred_gru = [1 if value >=0.5 else 0.0 for value in predicted]\n",
+    "y_pred_gru[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1506,  1107],\n",
-       "       [  294, 45793]], dtype=int64)"
+       "0.9708829568788501"
       ]
      },
-     "execution_count": 317,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "confusion_matrix(y_test, y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 318,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9712320328542094"
-      ]
-     },
-     "execution_count": 318,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "accuracy_score(y_test, y_pred)"
+    "accuracy_score(y_test, y_pred_gru)"
    ]
   },
   {
