data path updated

--- a/review_sentiment.ipynb
+++ b/review_sentiment.ipynb
@@ -49,8 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('Review-Sentiment-Hepsiburada.csv')\n",
-    "data.head()\n",
+    "data = pd.read_csv(data_path)\n",
+    "data.head() \n",
     "\n",
     "df = data.copy()"
    ]
