some notes added

--- a/review_sentiment.ipynb
+++ b/review_sentiment.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,6 +420,21 @@
     "    reset_after=True, => is used to specify whether the reset gate is applied after or before the matrix multiplication.\n",
     "...\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What is the difference between LSTM and GRU?\n",
+    "\n",
+    "differences table \n",
+    "\n",
+    "| LSTM | GRU |\n",
+    "| --- | --- |\n",
+    "| LSTM has three gates: input, output, and forget gate | GRU has two gates: reset and update gate |\n",
+    "| LSTM has a cell state that runs through the entire chain, whereas GRU has a hidden state that runs through the entire chain | GRU does not have a cell state like LSTM |\n",
+    "| LSTM is more complex than GRU | GRU is less complex than LSTM |"
    ]
   },
   {
@@ -767,13 +782,6 @@
    "source": [
     "accuracy_score(y_test, y_pred_gru)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
