optimizer changes from Adam to RMSprop

--- a/reiew-withoutstopwords.ipynb
+++ b/reiew-withoutstopwords.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +36,12 @@
     "from tensorflow.keras.layers import Embedding\n",
     "from tensorflow.keras.layers import GRU, Dense\n",
     "\n",
-    "from tensorflow.keras.optimizers import Adam"
+    "from tensorflow.keras import optimizers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "['bu', 'çok', 'çünkü', 'da', 'daha', 'de', 'defa', 'diye', 'eğer', 'en']"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "['bugün', 'hava', 'güzel', 'sıcaklık', 'derece']"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
        "((194797,), (194797,))"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "array([16, 19, 15,  2, 19,  4,  4, 30, 27, 13])"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "49"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
        "(194797, 49)"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,26 +384,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_8\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " embedding_7 (Embedding)     (None, 49, 50)            500000    \n",
+      " embedding_1 (Embedding)     (None, 49, 50)            500000    \n",
       "                                                                 \n",
-      " gru_15 (GRU)                (None, 49, 16)            3264      \n",
+      " gru_3 (GRU)                 (None, 49, 16)            3264      \n",
       "                                                                 \n",
-      " gru_16 (GRU)                (None, 49, 8)             624       \n",
+      " gru_4 (GRU)                 (None, 49, 8)             624       \n",
       "                                                                 \n",
-      " gru_17 (GRU)                (None, 4)                 168       \n",
+      " gru_5 (GRU)                 (None, 4)                 168       \n",
       "                                                                 \n",
-      " dense_5 (Dense)             (None, 1)                 5         \n",
+      " dense_1 (Dense)             (None, 1)                 5         \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 504061 (1.92 MB)\n",
@@ -427,14 +427,14 @@
     "model.add(GRU(units=4, activation='tanh', return_sequences=False))\n",
     "model.add(Dense(units=1, activation='sigmoid'))\n",
     "\n",
-    "model.compile(loss='binary_crossentropy', optimizer=Adam(), metrics=['accuracy'])\n",
+    "model.compile(loss='binary_crossentropy', optimizer=optimizer.RMSprop(), metrics=['accuracy'])\n",
     "\n",
     "model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -442,18 +442,18 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/2\n",
-      "6088/6088 [==============================] - 355s 57ms/step - loss: 0.1201 - accuracy: 0.9610\n",
+      "6088/6088 [==============================] - 370s 59ms/step - loss: 0.1364 - accuracy: 0.9552\n",
       "Epoch 2/2\n",
-      "6088/6088 [==============================] - 359s 59ms/step - loss: 0.0742 - accuracy: 0.9749\n"
+      "6088/6088 [==============================] - 371s 61ms/step - loss: 0.1099 - accuracy: 0.9629\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.History at 0x1fd309cd5d0>"
+       "<keras.src.callbacks.History at 0x1d64db1fa10>"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,29 +464,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1522/1522 [==============================] - 16s 9ms/step - loss: 0.0914 - accuracy: 0.9708\n"
+      "1522/1522 [==============================] - 16s 9ms/step - loss: 0.1088 - accuracy: 0.9650\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.9707597494125366"
+       "0.9650102853775024"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.evaluate(X_test_tokenized_pad, y_test)[1]"
+    "model.evaluate(X_test_tokenized_pad, y_test)[1] "
    ]
   }
  ],
