--- a/review_sentiment.ipynb
+++ b/review_sentiment.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('Review-Sentiment-Hepsiburada.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +178,7 @@
        "array([21, 25, 17, ..., 18, 39, 21])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +220,7 @@
        "'Özellikle bu kısma yazıyorum iyice okuyunuz,cihazın hızı çok iyi.Isınma normal boyutlarda.Kamerası elinizi sabit tutarsanız ve gündüz çok net gece ise çok net çekmez.Görüntülü konuşma özelliği yok ancak uygulama ile olur,anten çekimi gayet iyi.Parmak izi okuyucusu gayet hızlı bazen tuşu silmenizi istiyor ve okuyamıyor kirden vs...Ön kamera da tatmin edici,çekim esnasında ekran beyaz ışık vererek flaş görevi görür.Batarya bana 1 hafta gidiyor sık kullanımda ise 2-3 gün gidiyor.Hızlı şarj 1 saatte doluyor , şekilleri ele oturuyor ve şık bir görüntü var.Telefonu aldığım gün gittim ve ilk girdiğim yerden ekran koruyucu ve kılıf buldum.Kulaklık sesi çok net ve yüksek ancak kendi hoparlörü biraz zayıf sesi.Ekrana bakarken açık kalma özelliği yok.Diğer akıllı cihaz özellikleri %90 ı bu cihazda mevcut.Güç tasarrufu 2 ayrı modu var ve çok başarılı çalışıyor.4gb ram var genelde yarısı boş kalıyor.Bir de yeni cihazların çoğu titreşimi az ve sesi de az çıkıyor.Bu cihaz da içine dahil...Bu cihazlar güncelleme almaz ve rom bulunmuyormuş.Benim için güncelleme sorun olmaz -cihaz parasına göre s serisi ile yarışıyor çünkü.Biraz metal olmasından dolayı elden kolay kaysada duruşu ve gösterişi iyidir.Çift flaşı var arkada.Kısaca şöyle ki bu fiyata bu ürün alınır.5 aydır kullanıyorum kasma donma felan zaten olmaz,bataryası iyi,şekli iyi,özellikler de iyi....En büyük kafa karıştıran soru şu ki hadi cihaz arıza yaptı veya düştü ekranı kırıldı.Bunun bir servisi var,ithalatçı garantisi de var.Cihazın adı sanı belli...Parça bulanmaz tamir olmaz derseniz size kalmış.Zaten normal bir cihazı da düşürseniz farkedermi?.Güncelleme almaz diyorlar bu konuda düşünebilirsiniz.S serisi cihazlarla hızını kıyaslarsınız ama güncelleme ile araya fark koymuşlar.İki katı fiyata satılan cihazla farkı olmasa zaten olmaz değil mi?Almayı düşünenler başka bir cihazla kıyas yapacaksa yine  7pro veya 9 baksınlar.C5 pro da biraz boyutu kısa ve kibar....Sonuçta ömürlük değil alın fazla düşünmeyin'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +240,7 @@
        "59"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +261,7 @@
        "0.9597982726686571"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +284,7 @@
        "(194797, 59)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +309,7 @@
        "[86, 32, 14, 7, 2, 4, 3294, 416]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +334,7 @@
        "          2,    4, 3294,  416])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +354,7 @@
        "'fiyatına göre gayet güzel bir ürün ışıkta güçlü'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,9 +373,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nInit signature:\\nGRU(\\n    units, => is used to determine the output size of the GRU layer.\\n    activation='tanh', => is used to determine the activation function.\\n    recurrent_activation='sigmoid', => is used to determine the activation function for the recurrent step.\\n    use_bias=True, => is used to determine whether or not a bias vector will be used.\\n    kernel_initializer='glorot_uniform', => is used to initialize the kernel weights matrix.\\n    recurrent_initializer='orthogonal', => is used to initialize the recurrent weights matrix.\\n    bias_initializer='zeros', => is used to initialize the bias vector.\\n    kernel_regularizer=None, => is used to apply regularization to the kernel weights matrix.\\n    recurrent_regularizer=None, => is used to apply regularization to the recurrent weights matrix.\\n    bias_regularizer=None, => is used to apply regularization to the bias vector.\\n    activity_regularizer=None, => is used to apply regularization to the output of the layer.\\n    kernel_constraint=None, => is used to apply constraints to the kernel weights matrix.\\n    recurrent_constraint=None, => is used to apply constraints to the recurrent weights matrix.\\n    bias_constraint=None, => is used to apply constraints to the bias vector. \\n    dropout=0.0, => is used to specify the dropout rate for the input units. \\n    recurrent_dropout=0.0, => is used to specify the dropout rate for the recurrent units.\\n    return_sequences=False, => is used to specify whether or not the output of the layer will be a sequence. \\n    return_state=False, => is used to specify whether or not the last state will be returned in addition to the output.\\n    go_backwards=False, => is used to specify the direction of the input sequence.\\n    stateful=False, => is used to specify whether or not the last state for each sample at index i in a batch will be used as initial state for the sample of index i in the following batch.\\n    unroll=False, => is used to specify whether or not the network will be unrolled.\\n    time_major=False, => is used to specify whether the first dimension represents the time steps. \\n    reset_after=True, => is used to specify whether the reset gate is applied after or before the matrix multiplication.\\n...\\n\""
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# ?Embedding\n",
     "\"\"\"\n",
@@ -470,26 +490,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_10\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " embedding_9 (Embedding)     (None, 59, 50)            500000    \n",
+      " embedding_1 (Embedding)     (None, 59, 50)            500000    \n",
       "                                                                 \n",
-      " lstm_18 (LSTM)              (None, 59, 16)            4288      \n",
+      " lstm_3 (LSTM)               (None, 59, 16)            4288      \n",
       "                                                                 \n",
-      " lstm_19 (LSTM)              (None, 59, 8)             800       \n",
+      " lstm_4 (LSTM)               (None, 59, 8)             800       \n",
       "                                                                 \n",
-      " lstm_20 (LSTM)              (None, 4)                 208       \n",
+      " lstm_5 (LSTM)               (None, 4)                 208       \n",
       "                                                                 \n",
-      " dense_6 (Dense)             (None, 1)                 5         \n",
+      " dense_1 (Dense)             (None, 1)                 5         \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 505301 (1.93 MB)\n",
@@ -515,14 +535,14 @@
     "model.add(LSTM(units=4, activation='tanh', return_sequences=False))\n",
     "model.add(Dense(units=1, activation='sigmoid'))\n",
     "\n",
-    "model.compile(loss='binary_crossentropy', optimizer=optimizers.Adam(), metrics=['accuracy'])\n",
+    "model.compile(loss='binary_crossentropy', optimizer=optimizers.RMSprop(), metrics=['accuracy'])\n",
     "\n",
     "model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -530,56 +550,56 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/2\n",
-      "6088/6088 [==============================] - 411s 66ms/step - loss: 0.1277 - accuracy: 0.9586\n",
+      "6088/6088 [==============================] - 416s 67ms/step - loss: 0.1505 - accuracy: 0.9505\n",
       "Epoch 2/2\n",
-      "6088/6088 [==============================] - 420s 69ms/step - loss: 0.0765 - accuracy: 0.9734\n"
+      "6088/6088 [==============================] - 415s 68ms/step - loss: 0.1093 - accuracy: 0.9632\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.History at 0x1d9b6dd7d90>"
+       "<keras.src.callbacks.History at 0x12713a04890>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(X_train_tokenized_pad, y_train, epochs=2)"
+    "model.fit(X_train_tokenized_pad, y_train, epochs=2) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1522/1522 [==============================] - 20s 12ms/step - loss: 0.0862 - accuracy: 0.9696\n"
+      "1522/1522 [==============================] - 29s 17ms/step - loss: 0.1035 - accuracy: 0.9664\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.9696098566055298"
+       "0.9664065837860107"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.evaluate(X_test_tokenized_pad, y_test)[1]"
+    "model.evaluate(X_test_tokenized_pad, y_test)[1] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +625,7 @@
        "[1, 1, 1, 1, 1, 1, 1, 0.0, 1, 1]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,16 +637,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9696098562628337"
+       "0.9664065708418891"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,18 +664,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_11\"\n",
+      "Model: \"sequential_3\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " embedding_10 (Embedding)    (None, 59, 50)            500000    \n",
+      " embedding_3 (Embedding)     (None, 59, 50)            500000    \n",
       "                                                                 \n",
       " gru_3 (GRU)                 (None, 59, 16)            3264      \n",
       "                                                                 \n",
@@ -663,7 +683,7 @@
       "                                                                 \n",
       " gru_5 (GRU)                 (None, 4)                 168       \n",
       "                                                                 \n",
-      " dense_7 (Dense)             (None, 1)                 5         \n",
+      " dense_3 (Dense)             (None, 1)                 5         \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 504061 (1.92 MB)\n",
@@ -687,14 +707,14 @@
     "model.add(GRU(units=4, activation='tanh', return_sequences=False))\n",
     "model.add(Dense(units=1, activation='sigmoid'))\n",
     "\n",
-    "model.compile(loss='binary_crossentropy', optimizer=optimizers.Adam(), metrics=['accuracy'])\n",
+    "model.compile(loss='binary_crossentropy', optimizer=optimizers.RMSprop(), metrics=['accuracy'])\n",
     "\n",
     "model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -702,18 +722,18 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/2\n",
-      "6088/6088 [==============================] - 467s 75ms/step - loss: 0.1695 - accuracy: 0.9523\n",
+      "6088/6088 [==============================] - 429s 69ms/step - loss: 0.1372 - accuracy: 0.9554\n",
       "Epoch 2/2\n",
-      "6088/6088 [==============================] - 419s 69ms/step - loss: 0.0830 - accuracy: 0.9716\n"
+      "6088/6088 [==============================] - 397s 65ms/step - loss: 0.1067 - accuracy: 0.9634\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.History at 0x1d9b4ee76d0>"
+       "<keras.src.callbacks.History at 0x12713b0b9d0>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,23 +744,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1522/1522 [==============================] - 18s 11ms/step - loss: 0.0857 - accuracy: 0.9709\n"
+      "1522/1522 [==============================] - 19s 11ms/step - loss: 0.1023 - accuracy: 0.9654\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.9708829522132874"
+       "0.9654003977775574"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,14 +771,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1522/1522 [==============================] - 17s 10ms/step\n"
+      "1522/1522 [==============================] - 19s 12ms/step\n"
      ]
     }
    ],
@@ -768,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +797,7 @@
        "[1, 1, 1, 1, 1, 1, 1, 0.0, 1, 1]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,22 +809,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9708829568788501"
+       "0.9654004106776181"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accuracy_score(y_test, y_pred_gru)"
+    "accuracy_score(y_test, y_pred_gru) "
    ]
   },
   {
@@ -816,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +859,7 @@
        "0.9650308008213553"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,13 +873,6 @@
     "\n",
     "accuracy_score(y_test, logistic_regression.predict(X_test_vectorized))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
